--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="read_sorce">Источник</string>
     <string name="my_shops">Загрузить Мои магазины</string>
     <string name="Parent"></string>
+    <string name="clear_variables">Load previous data</string>
+    <string name="save_result">Save</string>
 </resources>
