Переделана загрузка из файловой системы, запрещена смена ориентации экрана.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="Parent"></string>
     <string name="clear_variables">Load previous data</string>
     <string name="save_result">Save</string>
+    <string name="instruction">Для загрузки списка из файла, файл должен находится  SD карте в корне, его имя должно быть 1111.txt. </string>
 </resources>
