--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="read_sorce">Источник</string>
     <string name="my_shops">Загрузить Мои магазины</string>
     <string name="Parent"></string>
-    <string name="clear_variables">Load previous data</string>
-    <string name="save_result">Save</string>
+    <string name="clear_variables">Загрузить предыдущий сеанс</string>
+    <string name="save_result">Сохранить все данные</string>
     <string name="instruction">Для загрузки списка из файла, файл должен находится  SD карте в корне, его имя должно быть 1111.txt. </string>
+    <string name="enter_data">Ввести данные</string>
+    <string name="process_data">Обработать данные</string>
 </resources>
