При выходе из ДатаФиндер затираются значения в АктивитиМайн.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,14 @@
     <string name="app_name">RW_checker</string>
     <string name="title_activity_sample">sample</string>
     <string name="read_sorce">Источник</string>
-    <string name="my_shops">Загрузить Мои магазины</string>
+    <string name="my_shops">Мои магазины</string>
     <string name="Parent"></string>
     <string name="clear_variables">Загрузить предыдущий сеанс</string>
     <string name="save_result">Сохранить все данные</string>
-    <string name="instruction">Для загрузки списка из файла, файл должен находится  SD карте в корне, его имя должно быть 1111.txt. </string>
+    <string name="instruction">Для загрузки списка из файла, файл должен находится  SD карте в
+        корне, его имя должно быть 1111.txt. Для очистки списка загрузите в него НЕ числовое
+        значение.
+    </string>
     <string name="enter_data">Ввести данные</string>
     <string name="process_data">Обработать данные</string>
     <string name="need">Storage permission is needed to show files count</string>
