--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="Parent"></string>
     <string name="clear_variables">Загрузить предыдущий сеанс</string>
     <string name="save_result">Сохранить все данные</string>
-    <string name="instruction">Для загрузки списка из файла, файл должен находится  SD карте в
+    <string name="instruction">Для загрузки списка из файла, файл должен находится  на SD карте в
         корне, его имя должно быть 1111.txt. Для очистки списка загрузите в него НЕ числовое
         значение.
     </string>
